# ChangeLog for media-gfx/sxiv
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/sxiv/ChangeLog,v 1.7 2012/04/05 07:43:49 jdhore Exp $

  05 Apr 2012; Jeff Horelick <jdhore@gentoo.org> sxiv-1.0.ebuild:
  marked x86 per bug 409879

  29 Mar 2012; Agostino Sarubbo <ago@gentoo.org> sxiv-1.0.ebuild:
  Stable for amd64, wrt bug #409879

*sxiv-1.0 (14 Nov 2011)

  14 Nov 2011; Michael Weber <xmw@gentoo.org> +sxiv-1.0.ebuild:
  Version bump

  26 Aug 2011; Tim Harder <radhermit@gentoo.org> -sxiv-0.8.2.ebuild,
  -sxiv-0.9.ebuild:
  Remove old.

*sxiv-0.9-r1 (26 Aug 2011)

  26 Aug 2011; Tim Harder <radhermit@gentoo.org> +sxiv-0.9-r1.ebuild:
  Revbump to add support for savedconfig (bug #380419 by James Rowe).

*sxiv-0.9 (17 Aug 2011)

  17 Aug 2011; Tim Harder <radhermit@gentoo.org> +sxiv-0.9.ebuild:
  Version bump

*sxiv-0.8.2 (11 Aug 2011)

  11 Aug 2011; Tim Harder <radhermit@gentoo.org> +sxiv-0.8.2.ebuild,
  +metadata.xml:
  Initial import (bug #366871). Ebuild based on work by Petr Sabata.
