@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST sxiv-0.9.tar.gz 27363 RMD160 d4a7176aac975f7dba768dcb72227e29ae361132 SHA1 81d2b80830c5360a4d18d93205e54b422ad352a1 SHA256 5a6fc847e67936c05f70f539376450de3a588bbd619d14b5829e41ae5e69ff8a
 DIST sxiv-1.0.tar.gz 33568 RMD160 d2bef62119b691cbb5ec8e81de5d53e09e573e64 SHA1 e29e33c38fd2a6c8a2cb3b270776859328aa8e0e SHA256 fa49189d7bc139bd3dc50aa4e939fe4480c524117ed89dba7a3f54da5013885f
-EBUILD sxiv-0.9-r1.ebuild 847 RMD160 9d7aa7ae08bcc9412ee95c789ba0b925b3c2aa87 SHA1 ad187852822cd5b022251da924f74cdd11ee8199 SHA256 28feec877aec600377f8c81cc87eec3c31b56ca17a8a16a7874224aaf1f73d60
-EBUILD sxiv-1.0.ebuild 838 RMD160 58e414cfb4b5ba994787fc37a2affedc7350e8b5 SHA1 d321700b5cbe6358b8de11e19d4957bee5030a89 SHA256 2f95d08801dc08579099c9afa22443842eb0508e289afe13995b2c441685a197
-MISC ChangeLog 1068 RMD160 3a50c505928a2dde1495b03b65adeffc82a453ba SHA1 b45f948a6f4e116a81d23a13bcd1bef40b22461f SHA256 09821788d57b7b663e64cac2f4962aae5e59a0e34e302e160132ffe9b0b0d364
+EBUILD sxiv-0.9-r1.ebuild 831 RMD160 06f80d4e86aa13325e9123ae71f2a6e5a6d64499 SHA1 9e1cbf3821274e242107954c41c326b1fffb107a SHA256 7600ee294aed249cef3358c0b6d3bb78e4d415a0b21e61f101d9e460fcf3edef
+EBUILD sxiv-1.0.ebuild 825 RMD160 5e90514c164cc1e0df5b894ac4f3eb317e5dd87b SHA1 c4b7eceb4c0a92ea4ef83ad333359a39282a2c3e SHA256 bdba88410dc9f6534983444bb49334128247dfea2ce014488b8c8b261063050a
+MISC ChangeLog 1181 RMD160 324bf1060190c940a2a7248ecf9c8bd2a48ef08b SHA1 f8bb7975306931995ffbfc78930bc3c2002608c7 SHA256 13db6643b244610308c20bc0d0b0f2d70e9510efeaa785f859b699ec8cee07be
 MISC metadata.xml 163 RMD160 9cdda004bed83a887f4a756cb1550fab6ce563ce SHA1 bfc4f31690e338a159152dcd46d56ff7fd6b6e1b SHA256 212655100c50c4193072996553f15984b9788fb20fb4175efd2418b80d428564
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iJwEAQEIAAYFAk+VuvsACgkQfXuS5UK5QB1r8gQApL2lLtAcDbaft6YPvqZLeT9O
+FXVmILtTrb2jnE8VmXPWQGn/bt/b+T+xxkkaCEuHoSUfnTDXnowBIvTitQHF2SOs
+33IC/OW92RFSrgr2Gktnlt6Rvimytyk02ssps4AtePUZLLTeld59aqxO4Rc2z/u4
+UFjZB7+P8i/im8cDDXk=
+=u5FE
+-----END PGP SIGNATURE-----
