@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/sxiv/sxiv-0.9-r1.ebuild,v 1.1 2011/08/26 20:47:15 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/sxiv/sxiv-0.9-r1.ebuild,v 1.2 2012/04/23 20:25:56 mgorny Exp $
 
 EAPI=4
 
@@ -8,7 +8,7 @@ inherit eutils savedconfig toolchain-funcs
 
 DESCRIPTION="Simple (or small or suckless) X Image Viewer"
 HOMEPAGE="https://github.com/muennich/sxiv/"
-SRC_URI="https://github.com/downloads/muennich/${PN}/${P}.tar.gz"
+SRC_URI="mirror://github/muennich/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
