@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/sxiv
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/sxiv/ChangeLog,v 1.7 2012/04/05 07:43:49 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/sxiv/ChangeLog,v 1.8 2012/04/23 20:25:56 mgorny Exp $
+
+  23 Apr 2012; Michał Górny <mgorny@gentoo.org> sxiv-0.9-r1.ebuild,
+  sxiv-1.0.ebuild:
+  Use mirror://github.
 
   05 Apr 2012; Jeff Horelick <jdhore@gentoo.org> sxiv-1.0.ebuild:
   marked x86 per bug 409879
